Sun Feb 16 00:53:01 GMT 2014  Olly Betts <olly@survex.com>

	* docs/quickstart.rst: Split --cxxflags and --libs for portability
	  (noted by "Hurricane Tong" on xapian-devel).

Sat Feb 15 04:59:37 GMT 2014  Olly Betts <olly@survex.com>

	* docs/glossary.rst: Add definition of "collection frequency".

Fri Feb 14 22:24:26 GMT 2014  Olly Betts <olly@survex.com>

	* NEWS: Update.

Fri Jan 17 03:50:44 GMT 2014  Olly Betts <olly@survex.com>

	* backends/brass/brass_databasereplicator.cc,
	  backends/brass/brass_table.cc,
	  backends/chert/chert_databasereplicator.cc,
	  backends/chert/chert_table.cc,common/io_utils.cc,common/io_utils.h:
	  Add io_read_block() and io_write_block() as wrappers around pread()
	  and pwrite() (or lseek() plus read() and lseek() plus write()).

Sat Jan 11 06:32:19 GMT 2014  Olly Betts <olly@survex.com>

	* configure.ac: Sun C++ seems to explicitly need Crun now.

Sat Jan 11 02:23:06 GMT 2014  Olly Betts <olly@survex.com>

	* configure.ac: Fix checks for Sun C++.

Fri Jan 10 22:38:01 GMT 2014  Olly Betts <olly@survex.com>

	* matcher/multimatch.cc: timer_create() doesn't handle CLOCK_MONOTONIC
	  on Solaris, so use CLOCK_REALTIME there instead.

Fri Jan 10 11:22:37 GMT 2014  Olly Betts <olly@survex.com>

	* configure.ac: Improve handling of Sun's C++ compiler - trick libtool
	  into not adding -library=Cstd, and prefer -library=stdcxx4 if
	  supported.

Fri Jan 10 11:16:15 GMT 2014  Olly Betts <olly@survex.com>

	* configure.ac: Add XAPIAN_TEST_CXXFLAGS macro, and use it to check
	  the flags to cxx actually work.

Fri Jan 10 10:56:17 GMT 2014  Olly Betts <olly@survex.com>

	* configure.ac: Apply missing functional part of previous change.

Fri Jan 10 10:46:53 GMT 2014  Olly Betts <olly@survex.com>

	* configure.ac: Avoid using grep -e as /usr/bin/grep on Solaris
	  doesn't support it.

Fri Jan 10 03:30:10 GMT 2014  Olly Betts <olly@survex.com>

	* backends/brass/brass_databasereplicator.cc: Whitespace tweak.
